@@ -1,3 +1,7 @@
+2010-01-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* utils/player.js: Fix the compatible problem with IE8.
+
 2010-01-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* utils/player.html,
